--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:mysql://localhost:3306/openbanking
 spring.datasource.username=open_db
-spring.datasource.password=06f11a1255
+spring.datasource.password=
 
 # Hibernate
 
